# maestro.stori.audio

./: .agent-task  .cursorrules  .dockerignore  .env.example  .env.tourdeforce.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  generate_test_token.py  mvp_happy_path.py  org-presets.yaml  orpheus_mvp_batch0.mid  orpheus_mvp_batch5.mid  package-lock.json  package.json  pyproject.toml  requirements.txt  tmp_resolve_conflicts.py
.agentception/: agent-command-policy.md  agent-task-spec.md  multi-tier-agent-architecture.md  pipeline-config.json  pipeline-howto.md  stress-test-agent-kickoff.md  stress-test-parallelism.md
.cursor/: AGENT_COMMAND_POLICY.md  PARALLEL_AGENT_KICKOFF.md  PARALLEL_BUGS_TO_ISSUES.md  PARALLEL_CONDUCTOR.md  PARALLEL_ISSUE_TO_PR.md  PARALLEL_PR_REVIEW.md  PIPELINE_HOWTO.md  agent-command-policy.md  agent-task-spec.md  agentception-dispatcher.md  conflict-rules.md  multi-tier-agent-architecture.md  parallel-bugs-to-issues.md  parallel-conductor.md  parallel-issue-to-pr.md  parallel-pr-review.md  pipeline-config.json  pipeline-howto.md  role-versions.json  sandbox.json  worktrees.json
.github/: CREATE_ISSUES_PROMPT.md  CREATE_PR_PROMPT.md  PR_REVIEW_PROMPT.md  README.md  pr-review-prompt.md
agentception/: Dockerfile  EXTRACT.md  README.md  __init__.py  alembic.ini  app.py  config.py  models.py  poller.py  pyproject.toml  requirements.txt  telemetry.py
agentception/alembic/: env.py
agentception/alembic/versions/: 0001_ac_initial_schema.py  0002_ac_agent_events.py  0003_ac_initiative_phases.py
agentception/db/: __init__.py  base.py  engine.py  models.py  persist.py  queries.py
agentception/docs/: agent-tree-protocol.md  cursor-agent-spawning.md  plan-spec.md
agentception/intelligence/: __init__.py  ab_mode.py  ab_results.py  analyzer.py  dag.py  guards.py  pipeline_lanes.py  role_versions.py  scaling.py
agentception/mcp/: __init__.py  build_tools.py  plan_tools.py  server.py  types.py
agentception/readers/: __init__.py  active_label_override.py  context_pack.py  git.py  github.py  issue_creator.py  llm_phase_planner.py  phase_planner.py  pipeline_config.py  templates.py  transcripts.py  worktrees.py
agentception/routes/: __init__.py  api.py  control.py  intelligence.py  roles.py  templates_api.py  ui.py
agentception/routes/api/: __init__.py  _shared.py  build.py  config.py  control.py  intelligence.py  issues.py  pipeline.py  plan.py  telemetry.py  wizard.py  worktrees.py
agentception/routes/ui/: __init__.py  _shared.py  ab_testing.py  agents.py  api_reference.py  brain_dump.py  build_ui.py  cognitive_arch.py  config.py  dag.py  docs.py  github_ui.py  org_chart.py  overview.py  plan_ui.py  roles_ui.py  settings.py  telemetry.py  templates_ui.py  transcripts.py  worktrees.py
agentception/services/: __init__.py  llm.py
agentception/static/: app.css  app.js  telemetry.js
agentception/static/js/: agents.js  api.js  app.js  brain_dump.js  build.js  config.js  controls.js  dag.js  nav.js  org_chart.js  org_chart_tree.js  overview.js  plan.js  roles.js  telemetry.js  templates.js  toast.js  transcripts.js
agentception/static/scss/: _components.scss  _foundation.scss  _shared.scss  app.scss
agentception/static/scss/pages/: _ab-testing.scss  _agent-detail.scss  _agents.scss  _brain-dump.scss  _build.scss  _config.scss  _controls.scss  _dag.scss  _docs.scss  _issues.scss  _org-chart.scss  _overview.scss  _pipeline.scss  _plan.scss  _roles.scss  _spawn.scss  _telemetry.scss  _templates.scss  _toast.scss  _transcripts.scss  _worktrees.scss
agentception/templates/: _bd_recent_runs.html  _build_board.html  _doc_content.html  _org_preset_list.html  _org_role_list.html  _plan_recent_runs.html  _role_detail.html  _spawn_issues.html  _spawn_success.html  _telemetry_trend.html  _wizard_stepper.html  _worktree_detail.html  ab_testing.html  agent.html  agents.html  api_reference.html  base.html  brain_dump.html  build.html  cognitive_arch.html  config.html  controls.html  dag.html  docs.html  issue.html  issues_list.html  org_chart.html  overview.html  plan.html  pr.html  prs_list.html  roles.html  settings.html  spawn.html  telemetry.html  templates.html  transcript_detail.html  transcripts.html  worktrees.html
agentception/templates/partials/: agent_transcript.html  agents_list.html  analysis.html  approval_queue.html  issue_comments.html  phase_lanes.html  pr_checks.html  pr_reviews.html
agentception/tests/: conftest.py  test_a11y.py  test_agentception_ab_mode.py  test_agentception_ab_results.py  test_agentception_analyze_partial.py  test_agentception_analyzer.py  test_agentception_cognitive_arch.py  test_agentception_control.py  test_agentception_controls.py  test_agentception_dag.py  test_agentception_enriched_manifest.py  test_agentception_extraction.py  test_agentception_github.py  test_agentception_guards.py  test_agentception_mcp_plan.py  test_agentception_models.py  test_agentception_org_chart.py  test_agentception_pipeline_config.py  test_agentception_plan_api.py  test_agentception_plan_spec.py  test_agentception_poller.py  test_agentception_role_versions.py  test_agentception_roles.py  test_agentception_run_conductor.py  test_agentception_scaffold.py  test_agentception_scaling.py  test_agentception_spawn.py  test_agentception_spawn_conductor.py  test_agentception_telemetry.py  test_agentception_templates.py  test_agentception_transcripts.py  test_agentception_ui_agent.py  test_agentception_ui_brain_dump.py  test_agentception_ui_config.py  test_agentception_ui_overview.py  test_agentception_ui_plan.py  test_agentception_ui_telemetry.py  test_agentception_wizard.py  test_agentception_worktrees.py  test_agents_page.py  (+7 more)
agentception/tests/e2e/: test_agentception_workflow_e2e.py
alembic/: env.py
app/: config.py  main.py
deploy/: migrate-sqlite-to-postgres.py
docs/: ORPHEUS_HANDOFF.md  README.md  TERMINOLOGY.md  api.md  architecture.md  assets.md  frontend-auth-parity-prompt.md  integrate.md  (+8 more)
(+1940 files in other folders)
