[project]
name = "maestro-stori"
version = "0.1.3"
description = "AI-powered music composition service for Stori DAW"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "anyio>=4.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = "/tmp/pytest_cache"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__init__.py", "*/tests/*"]

[tool.coverage.report]
# Coverage gate: raised from 64% to 80% after test supercharge (Feb 2026).
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["app.services.assets", "app.services.neural.text2midi_backend"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "gradio_client", "mido"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
