[project]
name = "maestro"
version = "0.1.4"
description = "AI-powered music composition service for Stori DAW"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
    "typer>=0.9.0",
]

[project.scripts]
muse = "maestro.muse_cli.app:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "anyio>=4.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = "/tmp/pytest_cache"
addopts = "-v --tb=short"
filterwarnings = [
    # typer uses click's is_flag/flag_value params internally; suppress the
    # click deprecation warning that originates from typer's own params.py
    # rather than from project code.  Track: https://github.com/tiangolo/typer/issues/783
    "ignore:The 'is_flag' and 'flag_value' parameters are not supported by Typer:DeprecationWarning",
]

[tool.coverage.run]
source = ["maestro"]
branch = true
omit = ["maestro/__init__.py", "*/tests/*"]

[tool.coverage.report]
# Coverage gate: raised from 64% to 80% after test supercharge (Feb 2026).
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
namespace_packages = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["maestro.services.assets", "maestro.services.neural.text2midi_backend"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "gradio_client", "mido", "yaml"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["maestro"]
